k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: og-rummy
  labels:
    app: og-rummy
